Version 3.26 (?? October 2012)
  * More robust handling of degenerate ARIMA models.
  * New defaults for shaded colors used for prediction intervals in plots.

Version 3.25 (11 September 2012)
  * Fixed bug in simulate.Arima.
  * Improved handling of short seasonal time series in auto.arima().
  * Added seasonal argument to auto.arima().
  * Fixed bug in splinef() and added gcv method for estimating smoothing parameter.

Version 3.24 (23 July 2012
  * Fixed bug in auto.arima() introduced in v3.23 which meant a ARIMA(0,0,0) model was
    returned about half the time.

Version 3.23 (18 July 2012)
  * Fixed bug in arfima() which meant the drange argument was being ignored.
  * Extended auto.arima() so it returns something sensible when the data are constant.

Version 3.22 (07 June 2012)
  * Increased maximum forecast horizon for ets models from 2000 to unlimited.
  * Corrected bug in Arima(). Previously include.constant=FALSE was ignored.
  * Some corrections to bats and tbats.
  * Modified parallel implementation in auto.arima for Windows.

Version 3.21 (26 April 2012)
  * Fixed bug in auto.arima() when lambda is non-zero and stepwise is FALSE.
  * Fixed bug in auto.arima() in selecting d when D>0.
  * Fixed bug in ets() when seasonal period is less than 1.
  * Turned off warnings in auto.arima() and ets() when seasonal period is less than 1.
  * Added plotting methods for bats and tbats objects.
  * Changed default forecast horizons for bats and tbats objects.
  * Modified bats and tbats so they now use seasonal.periods when ts and msts objects are being modelled.

Version 3.20 (2 April 2012)
  * Fixed bugs in forecast.lm().
  * Improved handling of newdata in forecast.lm() to provide more meaningful error messages.
  * Fixed bug in dm.test() that occurred when errors were very small.

Version 3.19 (22 February 2012)
  * Improved plotting of forecast objects from lm models
  * Added MASE for lm forecasts using insample mean forecasts for scaling.